<resources>
    <string name="app_name">Notes Keep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Google_Sign_In">Continue with Google</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_login">Already Registered? Login.</string>
    <string name="new_user_register">New User? Register</string>
</resources>