<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/register" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/enter_first_name"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:hint="@string/enter_last_name"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:text="@string/already_registered_login" />




</LinearLayout>
